--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,12 +19,8 @@ h4 {
 }
 
 .header {
-    text-transform: uppercase;
     font-family: Verdana, sans-serif;
-    font-size: 1rem;
     font-weight: normal;
-    padding: 10px;
-    text-align: left;
     display: inline;
 }
 
@@ -35,11 +31,19 @@ ul {
     overflow: hidden;
 }
 
+li h1 {
+    text-transform: uppercase;
+    margin-left: 24px;
+    left: 24px;
+}
+
 li {
     color: rgb(50, 50, 50);
     font-weight: bold;
-    display: inline;
     font-size: 1rem;
+    display: inline;
+    position: relative;
+    right: 24px;
 }
 
 footer {
@@ -48,39 +52,42 @@ footer {
 }
 
 .navigate {
-    float: right;
     font-size: 16px;
-}
-
-.banner {
-    margin: 0;
-}
-
-.banner img {
-    padding: 32px 24px;
+    float: right;
+    position: absolute;
+    right: 24px;
+    top: 34px;
 }
 
 .oncampus {
     color: rgb(50, 50, 50);
     background-color: lightgray;
-    display: inline-block;
+    display: flex;
 }
 
 .start-button {
+    width: 100%;
     padding: 8px 30px;
-    float: right;
+    text-align: center;
 }
 
 .imglarge {
     width: 60%;
-}
-
-.imglarge {
-    width: 60%;
+    padding: 32px 24px;
 }
 
 .imgmedium {
     height: auto;
+}
+
+.campusimg {
+    display: flex;
+    border: solid 2px blue;
+}
+
+.campustext {
+    margin: auto;
+    display: block;
 }
 
 #campus {
