flex box to elements

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,6 +46,10 @@ li {
     right: 24px;
 }
 
+.campusimg {
+    border: solid 1px blue;
+}
+
 footer {
     font-size: 12px;
     color: rgb(50, 50, 50);
@@ -80,9 +84,9 @@ footer {
     height: auto;
 }
 
-.campusimg {
-    display: flex;
-    border: solid 2px blue;
+.imgsmall {
+    height: auto;
+    padding: 20px;
 }
 
 .campustext {
@@ -90,6 +94,19 @@ footer {
     display: block;
 }
 
+.campusimgs {
+    display: block;
+}
+
+.learnonline {
+    display: flex;
+}
+
+.thesis {
+    display: flex;
+}
+
 #campus {
     color: rgb(50, 50, 50);
+    display: inline;
 }
