--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,53 +1,45 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 16px;
 }
 
 body {
+    min-width: 1000px;
     background-color: white;
     font-family: Verdana, sans-serif;
 }
 
-h1 {
-    color: rgb(50, 50, 50);
+.boxes {
+    border: solid 2px rgb(160, 160, 160);
+    padding-right: 2px;
+    width: 86%;
 }
 
-h4 {
-    background-color: rgb(50, 50, 50);
-    color: white;
-    margin: auto;
-    padding: 8px 50px;
+h1 {
+    color: rgb(50, 50, 50);
+    font-size: 2rem;
 }
 
 .header {
     font-family: Verdana, sans-serif;
     font-weight: normal;
-    display: inline;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 86%;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-li h1 {
+.headerleft {
     text-transform: uppercase;
-    margin-left: 24px;
-    left: 24px;
+    width: 50%;
 }
 
-li {
-    color: rgb(50, 50, 50);
-    font-weight: bold;
-    font-size: 1rem;
-    display: inline;
-    position: relative;
-    right: 24px;
-}
-
-.campusimg {
-    border: solid 1px blue;
+.headerright {
+    text-align: right;
+    width: 50%;
 }
 
 footer {
@@ -56,57 +48,251 @@ footer {
 }
 
 .navigate {
-    font-size: 16px;
+    font-size: 1rem;
     float: right;
-    position: absolute;
+    position: relative;
     right: 24px;
     top: 34px;
-}
-
-.oncampus {
-    color: rgb(50, 50, 50);
-    background-color: lightgray;
-    display: flex;
-}
-
-.start-button {
-    width: 100%;
-    padding: 8px 30px;
-    text-align: center;
+    width: 50%;
+    text-align: right;
+    z-index: 10;
 }
 
 .imglarge {
-    width: 60%;
+    width: 100%;
     padding: 32px 24px;
+    min-width: 200px;
+    overflow: hidden;
+    height: auto;
 }
 
 .imgmedium {
     height: auto;
+    width: 100%;
 }
 
 .imgsmall {
     height: auto;
+    width: 100%;
     padding: 20px;
 }
 
-.campustext {
-    margin: auto;
-    display: block;
-}
-
-.campusimgs {
-    display: block;
-}
-
-.learnonline {
+.boxone {
+    width: 100%;
     display: flex;
+    background-color: lightgray;
 }
 
-.thesis {
+.boxoneleft {
+    width: 60%;
+}
+
+.boxoneright {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
 }
 
-#campus {
+.boxoneright h1 {
+    font-size: 3rem;
+}
+
+.start-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    width: 100%;
+    height: 3rem;
+    padding: 8px 30px;
+    background-color: rgb(50, 50, 50);
+    color: white;
+    padding: 8px;
+}
+
+.boxtwo {
+    display: flex;
+    width: 100%;
+}
+
+.boxtwoleft {
+    display: block;
+    width: 60%;
+}
+
+.boxtwolefttext {
+    padding-left: 24px;
     color: rgb(50, 50, 50);
-    display: inline;
+    font-size: 1.75rem;
+}
+
+.boxtworight {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.boxtworight {
+    border-left: solid 2px lightgray;
+    margin-top: 2px;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+.readmore {
+    color: cornflowerblue;
+}
+
+.orientation {
+    width: 100%;
+    display: flex;
+    border-bottom: solid 1px lightgray;
+}
+
+#orientationimg {
+    width: 35%;
+}
+
+#orientationtext {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    justify-content: center;
+}
+
+.ourcampus {
+    width: 100%;
+    display: flex;
+    border-top: solid 1px lightgray;
+    margin-top: 1px;
+}
+
+#ourcampusimg {
+    width: 35%;
+}
+
+#ourcampustext {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    justify-content: center;
+}
+
+.ourguestlecture {
+    width: 100%;
+    display: flex;
+    background-color: lightgray;
+}
+
+#ourguestlectureimg {
+    width: 35%;
+}
+
+#ourguestlecturetext {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+    justify-content: center;
+}
+
+.boxthree {
+    background-color: lightgray;
+    border: solid 1px lightgray;
+    display: block;
+    width: 100%;
+}
+
+.boxthreetitle {
+    width: 100%;
+    text-align: center;
+    margin: 32px;
+    font-size: 2rem;
+    color: rgb(50, 50, 50);
+}
+
+.learning {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 32px;
+}
+
+.sixbox {
+    width: 30%;
+    height: auto;
+    margin: 16px;
+    align-content: flex-start;
+    overflow: hidden;
+    background-color: white;
+}
+
+#text {
+    color: rgb(50, 50, 50);
+    padding: 8px;
+    margin: 8px;
+}
+
+.boxfour {
+    border-bottom: solid 2px lightgray;
+    margin-left: 2px;
+    color: rgb(50, 50, 50);
+}
+
+.boxfourheading {
+    text-align: center;
+}
+
+.boxfourcontent {
+    display: flex;
+}
+
+.boxfourleft {
+    width: 60%;
+    margin: 24px;
+}
+
+.boxfourright {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+#boxfourrightimg {
+    width: 35%;
+}
+
+#boxfourrighttext {
+    width: 65%;
+}
+
+.fisma {
+    background-color: lightgray;
+    display: flex;
+    align-items: center;
+}
+
+.nowandthen {
+    display: flex;
+    align-items: center;
+}
+
+footer {
+    font-family: Verdana, sans-serif;
+    font-weight: normal;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.footerleft {
+    text-transform: uppercase;
+    width: 50%;
+}
+
+.footerright {
+    width: 50%;
+    text-align: right;
 }
