--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,6 @@ html {
 }
 
 body {
-    min-width: 1000px;
     background-color: white;
     font-family: Verdana, sans-serif;
 }
@@ -23,7 +22,7 @@ h1 {
     font-size: 2rem;
 }
 
-.header {
+header {
     font-family: Verdana, sans-serif;
     font-weight: normal;
     display: flex;
@@ -47,16 +46,6 @@ footer {
     color: rgb(50, 50, 50);
 }
 
-.navigate {
-    font-size: 1rem;
-    float: right;
-    position: relative;
-    right: 24px;
-    top: 34px;
-    width: 50%;
-    text-align: right;
-    z-index: 10;
-}
 
 .imglarge {
     width: 100%;
@@ -145,10 +134,17 @@ footer {
     color: cornflowerblue;
 }
 
-.orientation {
+.boxtwocontainer {
     width: 100%;
     display: flex;
+    border-top: solid 1px lightgray;
     border-bottom: solid 1px lightgray;
+    margin-top: 1px;
+}
+
+.boxtwocontainer:hover {
+    background-color: lightgray;
+    margin: 0;
 }
 
 #orientationimg {
@@ -162,13 +158,6 @@ footer {
     justify-content: center;
 }
 
-.ourcampus {
-    width: 100%;
-    display: flex;
-    border-top: solid 1px lightgray;
-    margin-top: 1px;
-}
-
 #ourcampusimg {
     width: 35%;
 }
@@ -178,12 +167,6 @@ footer {
     flex-direction: column;
     width: 65%;
     justify-content: center;
-}
-
-.ourguestlecture {
-    width: 100%;
-    display: flex;
-    background-color: lightgray;
 }
 
 #ourguestlectureimg {
@@ -296,3 +279,156 @@ footer {
     width: 50%;
     text-align: right;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 720px) {
+    html {
+        width: 720px;
+    }
+
+    header {
+        display: flex;
+        height: 64px;
+        font-family: Verdana, sans-serif;
+        font-weight: normal;
+        justify-content: none;
+        align-items: none;
+        width: 100%;
+    }
+
+    .imglarge {
+        margin: 0;
+        padding: 0;
+    }
+
+    .imgmedium {
+        display: none;
+    }
+
+    .imgsmall {
+        width: 100%;
+    }
+
+    .headerleft {
+        display: none;
+    }
+
+    .headerright {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        text-align: none;
+    }
+
+    .boxes {
+        padding-right: 0;
+        padding-left: 2px;
+        width: 100%;
+    }
+
+    .boxone {
+        width: 100%;
+        display: block;
+    }
+
+    .boxoneleft {
+        width: 100%;
+    }
+
+    .boxoneright {
+        width: 100%;
+    }
+
+    .start-button {
+        width: 86%;
+        margin: 24px;
+        background-color: gray;
+    }
+
+    .boxtwo {
+        width: 100%;
+    }
+
+    .boxtwoleft {
+        display: none;
+    }
+
+    .boxtworight {
+        display: block;
+        width: 100%;
+    }
+
+    .orientation {
+        display: block;
+    }
+
+    .ourcampus {
+        display: block;
+    }
+
+    .ourguestlecture {
+        display: block;
+        background-color: white;
+    }
+
+    .boxthree {
+        display: block;
+        background-color: white;
+        font-size: 2rem;
+        font-weight: lighter;
+    }
+
+    .learning {
+        display: block;
+        width: 100%;
+    }
+
+    .sixbox {
+        width: 100%;
+        background-color: lightgray;
+    }
+
+    .sixbox p {
+        display: none;
+    }
+
+    .boxfourheading {
+        width: 100%;
+        font-size: 2rem;
+    }
+
+    .boxfourleft {
+        width: 100%;
+        margin-bottom: 24px;
+    }
+
+    .boxfourleft p {
+        display: none;
+    }
+
+    .boxfourleft h3 {
+        display: none;
+    }
+
+    .boxfourright {
+        display: none;
+    }
+
+    footer {
+        margin: 16px;
+        padding-left: 24px;
+    }
+
+    footer p {
+        font-size: 1.75rem;
+    }
+
+    .footerright {
+        display: none;
+    }
+
+    .footerleft {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+} 
