--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,9 +34,18 @@ header {
 .headerleft {
     text-transform: uppercase;
     width: 50%;
+    display: inline-flex;
 }
 
-.headerright {
+.icon {
+    display: none;
+}
+
+.headerleft img {
+    width: 3rem;
+}
+
+.navigate {
     text-align: right;
     width: 50%;
 }
@@ -287,12 +296,15 @@ footer {
 
     header {
         display: flex;
+        justify-content: space-evenly;
         height: 64px;
         font-family: Verdana, sans-serif;
         font-weight: normal;
-        justify-content: none;
-        align-items: none;
         width: 100%;
+    }
+
+    .navigate {
+        display: none;
     }
 
     .imglarge {
@@ -312,11 +324,22 @@ footer {
         display: none;
     }
 
-    .headerright {
+    .icon {
+        display: inline-block;
+        width: 3rem;
+        height: 3rem;
+    }
+
+    .iconbox {
+        display: inline-flex;
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         text-align: none;
+    }
+
+    .headerright {
+        display: inline-flex;
     }
 
     .boxes {
